Updated the css and script file

--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
       let qrImage = document.getElementById("qrImage");
       let text = document.getElementById("qrText");
       function generateQR() {
-        qrImage.src =
+        if(text.value.length>0){
+             qrImage.src =
           "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" 
           + text.value;
+          imgBox.classList.add("show-img");
+        }   
+        else {
+            text.classList.add("error");
+            setTimeout(()=>{
+                text.classList.remove("error");
+            },1000);
+        }
       }
     </script>
   </body>
